feat: add layout responsive

--- a/src/app/material-component/manage-category/manage-category.component.html
+++ b/src/app/material-component/manage-category/manage-category.component.html
@@ -12,7 +12,7 @@
 <hr />
 
 <mat-card>
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="outline">
     <mat-label>Procurar Categoria</mat-label>
     <input matInput (keyup)="applyFilter($event)" #input />
   </mat-form-field>
