--- a/src/app/material-component/category/category.component.html
+++ b/src/app/material-component/category/category.component.html
@@ -7,7 +7,7 @@
 <mat-dialog-content>
   <form [formGroup]="categoryForm">
     <div>
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="outline">
         <mat-label>Nome</mat-label>
         <input matInput formControlName="name" required />
         <mat-error
