--- a/src/app/material-component/category/category.component.scss
+++ b/src/app/material-component/category/category.component.scss
@@ -8,7 +8,17 @@
   text-align: center;
 }
 mat-form-field {
-  padding: 5px;
   flex-direction: column;
   display: flex;
+}
+
+@media screen and (min-width: 360px) and (max-width: 728px) {
+  .title-center {
+    font-size: 0.8rem;
+  }
+  mat-dialog-actions {
+    > button {
+      font-size: 0.7rem;
+    }
+  }
 }
