--- a/src/app/material-component/manage-product/manage-product.component.html
+++ b/src/app/material-component/manage-product/manage-product.component.html
@@ -12,64 +12,63 @@
 <hr />
 
 <mat-card>
-  <mat-form-field appearance="fill">
+  
+  <mat-form-field appearance="outline">
     <mat-label>Procurar produto</mat-label>
     <input matInput (keyup)="applyFilter($event)" #input />
   </mat-form-field>
 </mat-card>
+
 <hr>
 
-<mat-card>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
-    <ng-container matColumnDef="name" class="action-link">
-      <th mat-header-cell *matHeaderCellDef>NOME</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="categoryName">
-      <th mat-header-cell *matHeaderCellDef>CATEGORIA</th>
-      <td mat-cell *matCellDef="let element">{{ element.categoryName }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef>DESCRIÇÃO</th>
-      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef>PREÇO</th>
-      <td mat-cell *matCellDef="let element">{{ element.price | currency: 'BRL'}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef>EDITAR</th>
-      <td mat-cell *matCellDef="let element" class="action-link">
-        <button
-          mat-icon-button
-          color="primary"
-          matTooltip="Editar"
-          (click)="handleEditAction(element)"
-        >
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button
-          mat-icon-button
-          color="primary"
-          matTooltip="Deletar"
-          (click)="handleDeleteAction(element)"
-        >
-          <mat-icon>delete</mat-icon>
-        </button>
-        <mat-slide-toggle
-          color="primary"
-          (change)="onChange($event.checked, element.id)"
-          matTooltip="Ativar ou Desativar Produto"
-          [checked]="element.status"
-        ></mat-slide-toggle>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+<mat-card class="card-container">
+  <div class="table-content">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z4">
+      <ng-container matColumnDef="name" >
+        <th mat-header-cell *matHeaderCellDef>NOME</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
+      <ng-container matColumnDef="categoryName">
+        <th mat-header-cell *matHeaderCellDef>CATEGORIA</th>
+        <td mat-cell *matCellDef="let element">{{ element.categoryName }}</td>
+      </ng-container>
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef>DESCRIÇÃO</th>
+        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      </ng-container>
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef>PREÇO</th>
+        <td mat-cell *matCellDef="let element">{{ element.price | currency: 'BRL'}}</td>
+      </ng-container>
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef>EDITAR</th>
+        <td mat-cell *matCellDef="let element" class="action-link">
+          <button
+            mat-icon-button
+            color="primary"
+            matTooltip="Editar"
+            (click)="handleEditAction(element)"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            color="primary"
+            matTooltip="Deletar"
+            (click)="handleDeleteAction(element)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+          <mat-slide-toggle
+            color="primary"
+            (change)="onChange($event.checked, element.id)"
+            matTooltip="Ativar ou Desativar Produto"
+            [checked]="element.status"
+          ></mat-slide-toggle>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
 </mat-card>
