--- a/src/app/material-component/product/product.component.scss
+++ b/src/app/material-component/product/product.component.scss
@@ -1,15 +1,27 @@
 mat-toolbar {
   width: auto;
   margin-bottom: 10px;
-
 }
-
 .title-center {
   flex: 1 1 auto;
   text-align: center;
 }
 mat-form-field {
-  padding: 5px;
   flex-direction: column;
   display: flex;
+}
+
+@media screen and (min-width: 360px) and (max-width: 728px) {
+  .btn-content {
+    > button {
+      font-size: 0.6rem;
+      margin: 5px;
+    }
+    > mat-label {
+      font-size: 0.3rem;
+    }
+  }
+  mat-dialog-content {
+    padding: 10px;
+  }
 }
