change class name

--- a/src/app/material-component/manage-product/manage-product.component.scss
+++ b/src/app/material-component/manage-product/manage-product.component.scss
@@ -7,7 +7,7 @@ mat-toolbar {
   overflow: auto;
 }
 
-.table-container {
+.table-content {
   overflow-x: auto;
 }
 .title-center {
@@ -32,24 +32,25 @@ mat-card {
   justify-content: space-between;
   text-transform: uppercase;
 }
-td , th {
+td,
+th {
   text-align: center;
   text-transform: uppercase;
 }
-mat-slide-toggle{
-transform: translateY(-7px)
-
+mat-slide-toggle {
+  transform: translateY(-7px);
 }
 
 @media screen and (min-width: 360px) and (max-width: 728px) {
- .add-product__content{
-  flex-direction: column;
-  > button {
-    margin-top: 15px;
-    font-size: .7rem;
+  .add-product__content {
+    flex-direction: column;
+    > button {
+      margin-top: 15px;
+      font-size: 0.7rem;
+    }
   }
- }
-  td , th {
-    font-size: .7rem;
+  td,
+  th {
+    font-size: 0.7rem;
   }
 }
