--- a/src/app/material-component/manage-user/manage-user.component.html
+++ b/src/app/material-component/manage-user/manage-user.component.html
@@ -4,35 +4,37 @@
 <hr />
 
 <mat-card>
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="outline">
     <mat-label>Filtro</mat-label>
     <input matInput (keyup)="applyFilter($event)" #input />
   </mat-form-field>
 </mat-card>
 
-<div>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z1">
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-    </ng-container>
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>Email</th>
-      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-    </ng-container>
-    <ng-container matColumnDef="contactNumber">
-      <th mat-header-cell *matHeaderCellDef>Contato</th>
-      <td mat-cell *matCellDef="let element">{{ element.contactNumber }}</td>
-    </ng-container>
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef>Ações</th>
-      <td mat-cell *matCellDef="let element">
-        <mat-slide-toggle color="primary" (change)="handleChangeAction($event.checked, element.id)"
-        matTooltip="Mudar status do Usuário" [checked]="element.status"></mat-slide-toggle>
-    </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-</div>
+<mat-card class="card-container">
+  <div class="card-content">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z1">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+      </ng-container>
+      <ng-container matColumnDef="contactNumber">
+        <th mat-header-cell *matHeaderCellDef>Contato</th>
+        <td mat-cell *matCellDef="let element">{{ element.contactNumber }}</td>
+      </ng-container>
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let element">
+          <mat-slide-toggle color="primary" (change)="handleChangeAction($event.checked, element.id)"
+          matTooltip="Mudar status do Usuário" [checked]="element.status"></mat-slide-toggle>
+      </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+</mat-card>
