--- a/src/app/material-component/view-bill/view-bill.component.scss
+++ b/src/app/material-component/view-bill/view-bill.component.scss
@@ -1,7 +1,31 @@
 mat-card{ 
     padding: 10px;
     margin: 10px;
+    > b , span {
+      text-transform: uppercase;
+      text-align: center;
+      font-size: 1rem;
+    }
+}
+.card-container {
+  max-height: 400px;
+  overflow: auto;
+}
+
+.card-content {
+  overflow-x: auto;
 }
 td, th {
     text-align: center;
+    text-transform: uppercase;
+}
+@media screen and (min-width: 360px) and (max-width: 728px) {
+  .card-container {
+    max-height: 400px;
+    overflow: auto;
+  }
+
+  .card-content {
+    overflow-x: auto;
+  }
 }
